# pyarty

./: .gitignore  README.md  plan.yaml  pyproject.toml
pyarty/: __init__.py  dsl.py  reader.py  writer.py
tests/: test_reader.py  test_types.py  test_writer.py
